Fix CSS layout issue on mobile screens

--- a/main.css
+++ b/main.css
@@ -3,6 +3,7 @@ body {
     padding: 0;
     font-family: "Inter", sans-serif;
     background-color: #FAF7F0;
+    overflow-x: hidden;
 }
 
 * {
@@ -12,7 +13,7 @@ body {
 .page {
     display: flex;
     flex-direction: column;
-    width: 100vw;
+    width: 100%;
 }
 
 .black {
